feat: add song images kinds and hash
